--- a/linktree.html
+++ b/linktree.html
@@ -9,28 +9,25 @@
     <header>
         <div class="entete">
             <img src="./images/robbie-lens.png" alt="photo de profil" class="photo_profil">
-            <h1 class="titre">MOUREAU Dimitri</h1>
-            <p>Conceteur Développeur d'Aplication en formation. <br>Bourg-en-Bresse et ces alentours</p>
-        </div>
-        <div class="navigation">
-             <ul>
-                <li>Visites</li>
-                <li>Likes</li>
-            </ul>
+            <div class="text_entete">
+                <h1 class="titre">MOUREAU Dimitri</h1>
+                <p>Conceteur Développeur d'Aplication en formation. <br>Bourg-en-Bresse et ces alentours</p>
+            </div>
         </div>
     </header>
     <main>
         <section class="nav_coordo">
-            <p>Je crée et développe vos projets!</p>
-            <a class="buton_nav" href="">Découvrir mes projets</a>
-            <a class="buton_nav" href="">M'envoyer un mail</a>
-            <a class="buton_nav" href="">Me joindre par téléphone</a>
+            <h2>Je crée et développe vos projets!</h2>
+            <a class="buton_nav" href="#"><p>Découvrir mes projets</p></a>
+            <a class="buton_nav" href="#"><p>M'envoyer un email</p></a>
+            <a class="buton_nav" href="#"><p>Me joindre par téléphone</p></a>
         </section>
         <section class="presentation">
             <h2>MOUREAU Dimitri</h2>
-            <p>jeune développeur</p>
-            <p>en formation professionel</p>
-            <p>Jeune développeur à en devenir, en reconversion proffesionel suite a une opération chirurgical. Basé sur le secteur de Bourg-en-bresse. Chaque projet est développer avec sérieux!</p>
+                <p>jeune développeur</p>
+                <p>en formation professionel</p>
+                <p>Jeune développeur à en devenir, en reconversion proffesionel suite a une opération chirurgical. 
+                    <br>Basé sur le secteur de Bourg-en-bresse. Chaque projet est développer avec sérieux!</p>
         </section>
     </main>
 </body>
