pofinement du projet

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8" />
-    <title>MOUREAU Dimitri</title>
+    <title> Linktree - MOUREAU Dimitri</title>
     <link rel="stylesheet" href="linktree.css">
 </head>
 <body>
-    <header>
+    <header >
         <div class="entete">
             <img src="./images/robbie-lens.png" alt="photo de profil" class="photo_profil">
             <div class="text_entete">
@@ -23,11 +23,13 @@
             <a class="buton_nav" href="#"><p>Me joindre par téléphone</p></a>
         </section>
         <section class="presentation">
-            <h2>MOUREAU Dimitri</h2>
+            <div class="presentation_perso">
+                <h2>MOUREAU Dimitri</h2>
                 <p>jeune développeur</p>
                 <p>en formation professionel</p>
-                <p>Jeune développeur à en devenir, en reconversion proffesionel suite a une opération chirurgical. 
-                    <br>Basé sur le secteur de Bourg-en-bresse. Chaque projet est développer avec sérieux!</p>
+                <p>Jeune développeur à en devenir, en reconversion proffesionel suite a une opération. 
+                    <br>Basé sur le secteur de Bourg-en-bresse. <br>Chaque projet est développer avec sérieux!</p>
+            </div>
         </section>
     </main>
 </body>
